# timetally-api

./: .gitignore  Cargo.toml  LICENSE  README.md  dockerfile-amd64
.gitea/workflows/: ci.yaml
src/: args.rs  lib.rs  main.rs  workhours.rs
